# OrbitEngine

./: .gitignore  CMakeHelper.txt  CMakeLists.txt  LICENSE.md  OrbitEngine.vcxproj  OrbitEngine.vcxproj.filters  README.md  base_camera.cpp  batch_component.cpp  batch_component.hpp  d3dx12.h  engine.cpp  engine.hpp  engine_callback.cpp  engine_initialization.cpp  engine_initialization.hpp  event_driven.hpp  exception.cpp  exception.hpp  helper.cpp  helper.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp  mouse_component.cpp  object.hpp  renderable.hpp  resource_manager.hpp  scene.hpp  third_person_camera.cpp  third_person_camera.hpp  time.cpp  transform.cpp  transform.hpp
converter/: CMakeLists.txt
converter/inc/: ArgumentParser.hpp  Helper.hpp  Reader.hpp  convert.hpp  textures.hpp
converter/inc/alembic/: DaeReader.hpp
converter/inc/fbx/: FbxReader.hpp  FbxTree.hpp  FbxTypes.hpp  fbx.hpp  fbx_convert.hpp  fbx_read.hpp
converter/inc/orb/: OrbFile.hpp  OrbIntermediate.hpp  orb.hpp  orb_type.hpp
converter/inc/raw/: RawReader.hpp
converter/inc/wavefront/: MaterialReader.hpp  ObjectReader.hpp
converter/src/: ArgumentParser.cpp  CMakeLists.txt  Helper.cpp  Reader.cpp  main.cpp
converter/src/alembic/: DaeReader.cpp
converter/src/fbx/: FbxReader.cpp  FbxTree.cpp  fbx_convert.cpp  fbx_read.cpp
converter/src/orb/: OrbFile.cpp  OrbIntermediate.cpp  orb.cpp
converter/src/raw/: RawReader.cpp
converter/src/wavefront/: MaterialReader.cpp  ObjectReader.cpp
docs/: Build.md  README.md
inc/: base_camera.hpp  batch_component.hpp  command_queue.hpp  component.hpp  engine.hpp  engine_initialization.hpp  exception.hpp  helper.hpp  input_layout.hpp  keyboard_component.hpp  material.hpp  mesh.hpp  mouse_component.hpp  orb_loader.hpp  physx.hpp  pixel_shader.hpp  renderable.hpp  resource_manager.hpp  scene.hpp  shader.hpp  texture.hpp  third_person_camera.hpp  time.hpp  vertex.hpp  wic_texture_loader.hpp
inc/Engine/: DebugObject.hpp  Engine.hpp  Object.hpp  Scene.hpp  Window.hpp
inc/implementation/: Common.hpp  Debug.hpp
inc/zlib/: gzguts.h
projects/__general/source/: CMakeLists.txt  build.bat  main.cpp
resources/: DefaultResources.orb  DefaultResources.rorb  build_resources.bat  fxc_log.txt
samples/: CMakeLists.txt  cmake_install.cmake
samples/guiWindow/: CMakeLists.txt  main.cpp
samples/orbViewerSample/: 3DView.cpp  3DView.hpp  CMakeLists.txt  FileParser.cpp  FileParser.hpp  OrbViewer.cpp  ViewerScene.cpp  ViewerScene.hpp  ViewerUI.cpp  ViewerUI.hpp
samples/orbWindow/: CMakeLists.txt  main.cpp  player.orb  scene.orb
samples/simpleSample/: CMakeLists.txt  cmake_install.cmake  main.cpp
samples/simpleWindow/: CMakeLists.txt  main.cpp
samples/spaceShooterSample/: AsteroidController.cpp  AsteroidController.hpp  CMakeLists.txt  SpaceScene.cpp  SpaceScene.hpp  SpaceShip.cpp  SpaceShip.hpp  WindowController.cpp  WindowController.hpp  spaceShooter.cpp
scripts/: create_project.bat
shader/: ps-d.fxc  ps.fxc  ps_default.fxc  ps_default_d.fxc  rs.fxo  rs_default.fxo  vs-d.fxc  vs.fxc  vs_default.fxc  vs_default_d.fxc
shader/Raw/: default.hlsl  material.hlsli  orbit.hlsli
src/: CMakeLists.txt  base_camera.cpp  batch_component.cpp  command_queue.cpp  component.cpp  dds_texture_loader.cpp  engine.cpp  engine_callback.cpp  engine_initialization.cpp  exception.cpp  helper.cpp  input_layout.cpp  keyboard_component.cpp  material.cpp  mesh.cpp  mouse_component.cpp  object.cpp  orb_loader.cpp  resource_manager.cpp  scene.cpp  shader.cpp  texture.cpp  third_person_camera.cpp  time.cpp  transform.cpp  wic_texture_loader.cpp
src/Engine/: DebugObject.cpp  Engine.cpp  Object.cpp  Scene.cpp
src/Engine/Bindings/: DDSTextureLoader.cpp  WICTextureLoader.cpp
src/Engine/Bindings/DX/: DXGIHelper.cpp  DXInput.cpp
src/Engine/Bindings/DX12/: CommandQueue.cpp  DX12Buffer.cpp  DX12Engine.cpp  DX12Helper.cpp  DX12Renderer.cpp  DX12ResourceManager.cpp  UploadBuffer.cpp
src/Engine/Bindings/Windows/: WindowWin.cpp
src/Engine/Component/: BatchComponent.cpp  Component.cpp  KeyboardComponent.cpp  MouseComponent.cpp  RigidStaticComponent.cpp  StateComponent.cpp
src/Engine/Management/: Allocator.cpp  AllocatorPage.cpp
src/Engine/Misc/: Logger.cpp  OrbLoader.cpp  Random.cpp  ResourceManager.cpp  ThreadPool.cpp  Time.cpp  Transform.cpp
src/Engine/PhysX/: PhysXController.cpp  PxOrbitErrorCallback.cpp
src/Engine/Rendering/: Light.cpp  Material.cpp  Mesh.cpp  Texture.cpp
src/Engine/Rendering/Cameras/: BaseCamera.cpp  ThirdPersonCamera.cpp
src/implementation/: Common.cpp
src/implementation/backends/DirectX11/: DirectX11_BlendState.cpp  DirectX11_DomainShader.cpp  DirectX11_Engine.cpp  DirectX11_GeometryShader.cpp  DirectX11_HullShader.cpp  DirectX11_IndexBuffer.cpp  DirectX11_InputLayout.cpp  DirectX11_PipelineState.cpp  DirectX11_PixelShader.cpp  DirectX11_RasterizerState.cpp  DirectX11_Renderer.cpp  DirectX11_SamplerState.cpp  DirectX11_Texture.cpp  DirectX11_VertexBuffer.cpp  DirectX11_VertexShader.cpp
src/implementation/backends/Windows/: Windows_Window.cpp
src/implementation/engine/: Allocator.cpp  AllocatorPage.cpp  GameObject.cpp  PhysxEngine.cpp  ResourceManager.cpp  SceneManager.cpp
src/implementation/engine/components/: BatchComponent.cpp  KeyboardComponent.cpp  MouseComponent.cpp  RigidDynamicComponent.cpp  RigidStaticComponent.cpp  StaticBatchComponent.cpp
src/implementation/misc/: DDSTextureLoader.cpp  DirectXHelpers.cpp  Logger.cpp  Time.cpp  Transform.cpp  WICTextureLoader.cpp  pch.cpp
src/implementation/rendering/: ArcBallCamera.cpp  Light.cpp  Mesh.cpp  Particle.cpp  ParticleSystem.cpp  ThirdPersonCamera.cpp
src/interfaces/engine/: EngineBase.cpp  SceneBase.cpp
src/interfaces/misc/: UnLoadable.cpp
src/interfaces/rendering/: BlendState.cpp  Camera.cpp  Material.cpp  PipelineState.cpp  Renderer.cpp  Shader.cpp
src/shader/code/: build.bat  default.hlsl  helper.hlsli  io.hlsli  light.hlsli  log.txt  material.hlsli  orbit.hlsli  rs.hlsli  scene.hlsli  textures.hlsli  types.os
src/zlib/: compress.c  gzlib.c  gzread.c  gzwrite.c  uncompr.c
(+171 files in other folders)
