cmake_minimum_required(VERSION "3.12.4")
project(###PROJECT_NAME###)

find_package(Orbit REQUIRED)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(###PROJECT_NAME### main.cpp)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ###PROJECT_NAME###)
target_link_libraries(###PROJECT_NAME### LINK_PUBLIC Orbit::Orbit)
get_target_property(ORBIT_INCLUDE_DIR Orbit::Orbit INTERFACE_INCLUDE_DIRECTORIES)
target_include_directories(###PROJECT_NAME### PRIVATE ${ORBIT_INCLUDE_DIR})
get_target_property(ORBIT_RENDER_ENGINE Orbit::Orbit ORBIT_RENDER_ENGINE)

add_compile_definitions(DIRECTINPUT_VERSION=0x0800 NOMINMAX ${ORBIT_RENDER_ENGINE} _ENABLE_EXTENDED_ALIGNED_STORAGE)